--- a/parts/appwizard/vcs_form.ui
+++ b/parts/appwizard/vcs_form.ui
@@ -78,5 +78,8 @@
         <slot>raiseWidget(int)</slot>
     </connection>
 </connections>
+<includes>
+    <include location="global" impldecl="in declaration">qwidgetstack.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
 </UI>
