Make a spacer a little bigger for default remove file

--- a/parts/autoproject/removefiledlgbase.ui
+++ b/parts/autoproject/removefiledlgbase.ui
@@ -242,7 +242,13 @@
                     <property name="sizeType">
                         <enum>Expanding</enum>
                     </property>
-                </spacer>
+                    <property name="sizeHint">
+			<size>
+			    <width>30</width>
+			    <height>20</height>
+			</size>
+		    </property>
+		</spacer>
                 <widget class="QPushButton">
                     <property name="name">
                         <cstring>removeButton</cstring>
